--- a/index.html
+++ b/index.html
@@ -70,13 +70,6 @@
 
         <hr>
 
-        <section class="fourth-Row-Container">
-            <div id="chart-Data">
-                <h2 class="coin_Updates">Latest Coin Price Updates</h2>
-                <canvas id="barchartexample" width="800" height="450"></canvas>
-            </div>
-        </section>
-
         <section id="team" class="bg-light-gray">
             <div class="container">
                 <div class="row">
@@ -102,7 +95,7 @@
                     <div class="col-sm-4">
                         <div class="team-member">
 
-                            <h4>PRAHLAD</h4>
+                            <h4>PRAHALADA REDDY</h4>
                             <img style='height: 50%; width: 50%;' src="Pict1.jpg" alt="story">
                             <p class="text-muted">Prahalada solely worked on designing the pages. He sketched the data model and used his knowledge for smooth implementation of THE DIGITAL CURRENCY.</p>
                             <ul class="list-inline social-buttons">
